--- a/Translucence.theme.css
+++ b/Translucence.theme.css
@@ -13,7 +13,7 @@
 @import url(https://capnkitten.github.io/BetterDiscord/Themes/Translucence/css/source.css);
 
 :root {
-	--app-bg: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2Fsteam-workshopmazda-rx7-fd--665688388682791876%2F&psig=AOvVaw0seuU2sAJJwbPhnTwxH0hC&ust=1687360403018000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCOiR_r-R0v8CFQAAAAAdAAAAABAE);
+	--app-bg: url(https://photos.smugmug.com/photos/i-RwWhtfz/0/X3/i-RwWhtfz-X3.jpg);
 	--app-blur: 6px;
 	--app-margin: 24px;
 	--app-radius: 8px; /*	-	*/
